<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable name="coin_error" type="String" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/srl_coins"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/search_bar_height"
            app:layout_behavior="@string/searchbar_scrolling_view_behavior"
            tools:ignore="PrivateResource">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_coins"
                style="Nested"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:itemCount="20"
                tools:listitem="@layout/coin_item" />
        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

        <ProgressBar
            android:id="@+id/pb_coins"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone"
            tools:visibility="invisible" />

        <ImageView
            android:id="@+id/icon_coin_error"
            android:layout_width="@dimen/error_icon_width"
            android:layout_height="@dimen/error_icon_height"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:src="@drawable/error"
            android:visibility="gone"
            tools:visibility="invisible"
            android:importantForAccessibility="no" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/text_coin_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/error_icon_height"
            android:gravity="center"
            android:text="@{coin_error}"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
            android:visibility="gone"
            tools:text="Error was caused because of.."
            tools:visibility="invisible" />

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.search.SearchBar
                android:id="@+id/search_bar"
                style="@style/CN_SearchBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="?attr/statusBarColor"
                android:hint="@string/hint_search"
                app:defaultMarginsEnabled="false" />
        </com.google.android.material.appbar.AppBarLayout>

        <com.google.android.material.search.SearchView
            android:id="@+id/search_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/hint_search"
            app:layout_anchor="@id/search_bar">
            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_coin_search"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"/>
                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
                        android:text="@string/search_history"
                        android:padding="@dimen/default_padding"
                        android:gravity="start" />
                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_coin_history"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"/>
                </LinearLayout>
            </androidx.core.widget.NestedScrollView>
        </com.google.android.material.search.SearchView>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>
